# Benchmarking_tissue_preparation

./: README.md  pyproject.toml  requirements.txt  segmentation_scFeature_extraction_4slides.ipynb  segmentation_scFeature_extraction_4slides_mod.ipynb  test-demo.ipynb  test-demo.py  tissue_preparation.py
pylibs/: tissue_preparation.py
