[tool.poetry]
name = "benchmarking-tissue-preparation"
version = "0.1.0"
description = ""
authors = ["shaohong feng <shaohong.feng.78@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.17.0"
numpy = "^2.1.0"
pandas = "^2.2.2"
scikit-image = "^0.24.0"
tifffile = "^2024.8.28"
DeepCell = "^0.12.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
